--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,10 +26,10 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 if(NOT EMSCRIPTEN)
 	if(ANDROID)
-		if(NOT ANDROID_SDL2_CMAKE_DIR)
-			message(FATAL_ERROR "ANDROID_SDL2_CMAKE_DIR not set to sdl2 src path")
-		endif()
-		add_subdirectory("${ANDROID_SDL2_CMAKE_DIR}" "${CMAKE_BINARY_DIR}/android_sdl")
+		#if(NOT ANDROID_SDL2_CMAKE_DIR)
+			#message(FATAL_ERROR "ANDROID_SDL2_CMAKE_DIR not set to sdl2 src path")
+		#endif()
+		#add_subdirectory("${ANDROID_SDL2_CMAKE_DIR}" "${CMAKE_BINARY_DIR}/android_sdl")
 	else()
 		find_package(SDL2 REQUIRED)
 	endif()
