--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,7 +21,7 @@ if(EMSCRIPTEN)
 else()
 	if(ANDROID)
 		#target_include_directories(test1 PUBLIC "${SDL2_INCLUDE_DIR}")
-		target_link_libraries(test1 SDL2main SDL2-static)
+		target_link_libraries(test1 SDL2main SDL2)
 	else()
 		target_include_directories(test1 PUBLIC "${SDL2_INCLUDE_DIR}")
 		target_link_libraries(test1 ${SDL2_LIBRARY})
